--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "highcharts": "^9.1.1",
+    "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.0.0",
     "immer": "2.1.3",
     "prop-types": "15.7.2",
