--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "prestart:api": "node tools/createMockDb.js"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "4.3.1",
     "highcharts": "^9.1.1",
     "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.0.0",
     "immer": "2.1.3",
+    "mdbreact": "^5.0.2",
+    "multiselect-react-dropdown": "^1.6.13",
     "prop-types": "15.7.2",
     "react": "16.8.4",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
