--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immer": "2.1.3",
     "prop-types": "15.7.2",
     "react": "16.8.4",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
